add text, links, rows and columns, and styles.

--- a/index.html
+++ b/index.html
@@ -2,22 +2,37 @@
 <html>
   <head>
     <title>Nicholas Raethke, A Coding Noob.</title>
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link  href="/css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
   </head>
   <body>
-    <div class="">
-      <h1>Nicholas Raethke</h1>
-      <h2>About Me</h2>
-        <p></p>
-      <h2>Some Previous Exercises</h2>
-        <p>Here is a list of exercises that I have worked on in my studies at Epicodus.</p>
-        <ul>
-          <li>href</li>
-          <li>href</li>
-          <li>href</li>
-          <li>href</li>
-        </ul>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 jumbotron">
+          <img src="img/predatorcoast.jpg" alt="A Color Inversion of the Oregon Coast">
+        </div>
+        <div class-"col-md-12 jumbotron">
+            <h1>Nicholas Raethke</h1>
+        </div>
+      <div>
+      <div class="row">
+        <div class="col-md-6 about">
+          <h2>About Me</h2>
+            <p>I have worked in the library sciences field for most of my adult life, which has given me ample opportunity to work with various software platforms and hardware. I spend a lot of time troubeshooting and training people with various levels of skill.  At home, I have explored various <strong>Linux Distros (<em>Fedora was a challenging and rewarding experiment for me</em>) and work with both Mac OS and Windows.</strong></p>
+            <p>Quite a few friends have left other careers to pursue futures in programming or other tech jobs.  I am still exploring what I want to do, but technical writing and user experience are both interesting fields.  I am also very interested in cybersecurity.</p>
+            <p>In the rest of my life, I enjoy biking, playing basketball, hiking, mushroom hunting, pinball, playing music and writing, and watching bad movies on vhs.  I also enjoy <span style="color:blue"><a href="https://www.grammarly.com/blog/what-is-the-oxford-comma-and-why-do-people-care-so-much-about-it/"> oxford commas</a> and reading.</span></p>
+        </div>
+        <div class="col-md-6 exercises">
+          <h2>Some Previous Exercises</h2>
+            <p>Here is a list of exercises that I have worked on in my studies at Epicodus.</p>
+            <ul>
+              <li><a href="https://github.com/nicholasraethke/wiki-sample">A rebuild of the wikipedia homepage</a></li>
+              <li><a href="https://github.com/nicholasraethke/shelter-puppies">A Shelter Website</a></li>
+              <li><a href="https://github.com/nicholasraethke/funkadelic">A tribute to Funkadelic</a></li>
+              <li><a href="https://github.com/nicholasraethke?tab=repositories">The rest of my fledgling projects that I hope to add more detail to later on.</a></li>
+            </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
