Add more content.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
       </div>
       <div class="row">
         <h1>Nicholas Raethke</h1>
-      <div>
+      </div>
       <div class="row">
         <div class="col-md-6 about">
           <h2>About Me</h2>
-            <p>I have worked in the library sciences field for most of my adult life, which has given me ample opportunity to work with various software platforms and hardware. I spend a lot of time troubeshooting and training people with various levels of skill.  At home, I have explored various <strong>Linux Distros (<em>Fedora was a challenging and rewarding experiment for me</em>) and work with both Mac OS and Windows.</strong></p>
+            <p>I have worked in the library sciences field for most of my adult life, which has given me ample opportunity to work with various software platforms and hardware. I spend a lot of time troubeshooting and training people with various levels of skill.  At home, I have explored various <strong>Linux Distros (<em>Fedora was a challenging and rewarding experiment for me</em>) and work with both Mac OS and Windows.</strong>  My academic background is completely devoid of computer sciences, but heavy on Comparative Literature, Critical Theory, and Philosophy (mostly useless in an economic sense).</p>
             <p>Quite a few friends have left other careers to pursue futures in programming or other tech jobs.  I am still exploring what I want to do, but technical writing and user experience are both interesting fields.  I am also very interested in cybersecurity.</p>
-            <p>In the rest of my life, I enjoy biking, playing basketball, hiking, mushroom hunting, pinball, playing music and writing, and watching bad movies on vhs.  I also enjoy <span style="color:blue"><a href="https://www.grammarly.com/blog/what-is-the-oxford-comma-and-why-do-people-care-so-much-about-it/"> oxford commas</a> and reading.</span></p>
+            <p>In the rest of my life, I enjoy biking, playing basketball, hiking, mushroom hunting, pinball, playing music and writing, and watching bad movies on vhs.  <span style="color:blue"> I also enjoy <a href="https://www.grammarly.com/blog/what-is-the-oxford-comma-and-why-do-people-care-so-much-about-it/"> oxford commas</a> and reading.</span></p>
         </div>
         <div class="col-md-6 exercises">
           <h2>Some Previous Exercises</h2>
             <p>Here is a list of exercises that I have worked on in my studies at Epicodus.</p>
             <ul>
-              <li><a href="https://github.com/nicholasraethke/wiki-sample">A rebuild of the wikipedia homepage</a></li>
-              <li><a href="https://github.com/nicholasraethke/shelter-puppies">A Shelter Website</a></li>
-              <li><a href="https://github.com/nicholasraethke/funkadelic">A tribute to Funkadelic</a></li>
+              <li><a href="https://github.com/nicholasraethke/wiki-sample">A rebuild of the wikipedia homepage with specific attention to rows and columns.</a></li>
+              <li><a href="https://github.com/nicholasraethke/shelter-puppies">A Shelter Website with emphasis on media queries.</a></li>
+              <li><a href="https://github.com/nicholasraethke/funkadelic">A tribute to Funkadelic that emphasized images and creating a sidebar.</a></li>
               <li><a href="https://github.com/nicholasraethke?tab=repositories">The rest of my fledgling projects to which I hope to add more detail later on.</a></li>
             </ul>
           <h2>Some Writing Samples</h2>
